force-app/main/default/objects/feedback__c/feedback__c.object-meta.xml
<CustomObject>
    <label>feedback</label>
    <nameField>
        <displayFormat>Feedback-{0000}</displayFormat>
        <label>feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>feedback</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>