force-app/main/default/objects/feedback__c/fields/Infrastructure_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Infrastructure_Complaint__c</fullName>
    <label>Infrastructure Complaint</label>
    <referenceTo>Infrastructure_Complaint__c</referenceTo>
    <relationshipLabel>feedback</relationshipLabel>
    <relationshipName>feedback</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>