force-app/main/default/objects/Feedback__c/fields/participant__c.field-meta.xml
<CustomField>
    <fullName>participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>participant</label>
    <referenceTo>Participant__c</referenceTo>
    <relationshipLabel>Feedbacks</relationshipLabel>
    <relationshipName>Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>