force-app/main/default/objects/feedback__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>⭐⭐⭐⭐⭐</fullName>
            </value>
            <value>
                <fullName>⭐⭐⭐⭐</fullName>
            </value>
            <value>
                <fullName>⭐⭐⭐</fullName>
            </value>
            <value>
                <fullName>⭐⭐</fullName>
            </value>
            <value>
                <fullName>⭐</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>